# mcnet

./: .gitignore  CMakeLists.txt  README.md  input.yaml  run.sh
aenet/: H.ann  O.ann  predict.in
src/: CMakeLists.txt  config.h  main.cpp  rng.h  stats.h  system.h
